--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "New Extension",
-  "version": "0.1",
+  "version": "0.2",
   "content_scripts": [
     {
       "matches": [
@@ -13,5 +13,9 @@
   "browser_action": {
     "default_icon": "download.png",
     "default_popup": "popup.html"
-  }
+  },
+  "permissions": [
+      "<all_urls>","webRequest","webRequestBlocking","tabs"
+  ],
+  "background":{"script":["background.js"]}
 }
