--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,7 @@
     "default_popup": "popup.html"
   },
   "permissions": [
-      "<all_urls>","webRequest","webRequestBlocking","tabs","http://127.0.0.1:8000/getdata/"
+      "<all_urls>","webRequest","webRequestBlocking","tabs","http://127.0.0.1:8000/getdata","http://*/","https://*/"
   ],
   "background": {
     "scripts": ["background.js"],
